[package]
name = "dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Removed idl-build feature because Anchor 0.27.0 does not have it

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
bincode = "1.3.3"
jupiter-cpi = { git = "https://github.com/jup-ag/jupiter-cpi", rev = "12bc5f6" }
getrandom = { version = "0.2.9", features = ["custom"] }

# Removed explicit solana-program dependency per Anchor warning
